# DataHabit

./: README.md  pyproject.toml
.github/workflows/: publish.yml
datasets/: ds2b_data.csv  students_data.csv
notebooks/: TaskData.ipynb  demo.ipynb  test.ipynb
src/datahabit/: __init__.py  behavior_analyzer.py  data_cleaner.py  deadline_predictor.py  difficulty_estimator.py  habit_score.py  pattern_detector.py  report_generator.py  task_data.py  visualizer.py
tests/: TaskData.ipynb  Untitled.ipynb  datahabit_demo.ipynb  datahabit_presentation_demo.ipynb  demo.ipynb  draft test.ipynb  test napud.ipynb
